tests/functional/lang/eval-fail/dynamic-attrs-let-2.err.exp
error: dynamic attributes not allowed in let
       at /pwd/lang/eval-fail/dynamic-attrs-let-2.nix:1:1:
            1| let
             | ^
            2|   ${"${"a"}"} = 1;
